<resources>
    <string name="app_name">Restaurant</string>

    <string name="start_activity">Start an Activity</string>
    <string name="kamera_2">Camera</string>
    <string name="Price">Price:</string>
    <string name="Description">Description:</string>
    <string name="Name">Name:</string>
    <string name="money">money:</string>
    <string name="Category">Category:</string>
    <string name="Components">Components:</string>
    <string name="Calories">Calories:</string>
    <string name="button_buy">Order</string>
    <string name="dilevery">Your delivery coming in 15 min.</string>

    <string name="activity_first_name">First Activity</string>
    <string name="activity_first_toolbar_title">Toolbar Title</string>

    <string name="notification_title">Item ordered</string>
    <string name="notification_text">The selected item has been ordered and will be shipped during the day.</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">This is the app which demonstrates usage of toasts, notifications, dialogs, preferences, toolbars and navigation drawers</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_home_long">Show All Fruits</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_settings_long">Change App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_about_long">About Us</string>

    <string name="fragment_master_action_create">Create</string>
    <string name="fragment_detal_action_update">Update</string>
    <string name="fragment_detal_action_delete">Delete</string>
</resources>
